# Helpdesk-beckend

./: README.md  README_websocket_client.md  main.py  pyproject.toml  run_tests.py  simple_client.py  test.py  ws_client.py
.clinerules/: 测试.md
app/: main.py
app/api/v1/: ws.py
app/api/v1/endpoints/: tests.py
app/core/: config.py  event_manager.py  request_manager.py  utils.py
app/onebot/: api.py
app/schemas/: __init__.py  onebot_request.py  qq.py
docs/: onebot_v11.md
tests/: __init__.py  conftest.py  test_utils.py
tests/test_schemas/: __init__.py  test_qq.py
