[project]
name = "helpdesk-beckend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "loguru>=0.7.3",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "pytest>=8.3.5",
    "sqlmodel>=0.0.24",
    "uvicorn[standard]>=0.34.2",
    "websockets>=15.0.1",
]
